(Format: Year/Month/Day)
Changes for 0.9.16:
*06/03/23:
   * Fixed duplicate ClickToFocus menu item (Thanks mal at komcept com)
   * Fix some tab stacking alignment and rendering on tab resize (Simon)
     (and very minor tidying)
     FbWinFrame.cc FbTk/XLayer.cc FbTk/XLayerItem.hh/cc
*06/03/22:
   * More external tabs work (Simon)
     - Can now be placed TopLeft/TopRight/BottomLeft/BottomRight
     - New "Tab Options" config menu, with (efficient) runtime updating
     - New tab.width config option to control external tab width
     - edge snapping includes tabs
     - decoration fixes where some missed the tab option
     - label text color was not updated
     Screen.hh/cc Window.hh/cc FbWinFrame.hh/cc Container.cc 
     fluxbox-nls.hh
*06/03/20:
   * Fixed some minor typos (Thanks Semushin Slava)
   * Fix placement config (some compilers resulted in ignoring of 
     placement policy setting), and a minor ext. tabs placement bug
     ScreenPlacement.cc Row/ColSmartPlacement.cc
   * External tabs (Simon)
     - option in Configure menu to enable
       - restart require at present when toggling this option
     - New apps pnemonic for "Deco" option: TAB, which is like NONE, 
       but with an external tab
     Notes:
     - tab width currently hardcoded
     - only alignment is topleft
     fluxbox.cc Screen.hh/cc Window.hh/cc FbWinFrame.hh/cc Remember.cc
     Container.hh/cc FbTk/XLayer.hh/cc XLayerItem.cc fluxbox-nls.hh
     RowSmart/ColSmart/UnderMousePlacement.cc WinButton.cc
-------------------------------------------------------------
Changes for 0.9.15:
*06/03/19:
   * Fixed some wrong fbsetroot nls (Thanks  Semushin Slava )
     nls/da_DK/Translation.m, nls/ko_KR/Translation.m
   * Cleaned up some nls and help text in ./fluxbox -h (Thanks Semushin Slava [php-coder at ngs ru] )
     nls/*/Translation.m, Screen.cc, main.cc
   * Titlebar button configuration changed from session.titlbar.left/right